Bug 1564515 - Update alignment and spacing in about:addons list r=rpl
Differential Revision: https://phabricator.services.mozilla.com/D37732

UltraBlame original commit: 94097350615051aafb25b453962ee2937a5611ef

--- a/toolkit/mozapps/extensions/content/aboutaddons.css
+++ b/toolkit/mozapps/extensions/content/aboutaddons.css
@@ -34,6 +34,13 @@ none
 important
 ;
 }
+body
+{
+cursor
+:
+default
+;
+}
 .
 header
 -
@@ -124,26 +131,6 @@ bottom
 8px
 ;
 }
-addon
--
-list
-message
--
-bar
--
-stack
-.
-pending
--
-uninstall
-{
-margin
--
-bottom
-:
-12px
-;
-}
 .
 list
 -
@@ -165,23 +152,34 @@ weight
 ;
 margin
 -
-block
+top
+:
+32px
+;
+margin
+-
+bottom
 :
 16px
 ;
 }
-.
+addon
+-
 list
--
+>
 section
--
-heading
 :
 first
 -
 of
 -
 type
+.
+list
+-
+section
+-
+heading
 {
 margin
 -
@@ -917,9 +915,9 @@ heading
 {
 margin
 -
-bottom
+top
 :
-16px
+48px
 ;
 }
 recommended
@@ -1083,6 +1081,14 @@ self
 :
 baseline
 ;
+margin
+-
+inline
+-
+end
+:
+0
+;
 }
 .
 disco
@@ -1125,9 +1131,7 @@ notice
 {
 margin
 :
-0
-.
-5em
+24px
 0
 ;
 }
